--- a/practice.html
+++ b/practice.html
@@ -14,8 +14,7 @@
       padding: 0;
       background: linear-gradient(to right, #c2e9fb, #a1c4fd);
     }
-
-    header {
+     header {
       background-color: #2c3e50;
       color: white;
     }
@@ -25,15 +24,6 @@
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
-      position: relative;
-    }
-
-    .hamburger {
-      font-size: 1.8em;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: white;
     }
 
     .header-title {
@@ -56,47 +46,84 @@
       text-decoration: underline;
     }
 
-    /* ドロワーメニュー */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      width: 30px;
+      gap: 5px;
+    }
+
+    .hamburger div {
+      height: 4px;
+      background-color: white;
+      border-radius: 2px;
+    }
+
     .drawer {
       position: fixed;
       top: 0;
       left: -250px;
-      width: 250px;
+      width: 220px;
       height: 100%;
-      background-color: #34495e;
-      overflow-x: hidden;
-      transition: 0.3s;
-      padding-top: 60px;
-      z-index: 1000;
-    }
-
-    .drawer a {
-      padding: 10px 20px;
-      text-decoration: none;
-      font-size: 1.2em;
-      color: white;
-      display: block;
-    }
-
-    .drawer a:hover {
       background-color: #2c3e50;
+      color: white;
+      padding-top: 60px;
+      transition: left 0.3s;
+      z-index: 1000;
     }
 
     .drawer.open {
       left: 0;
     }
 
+    .drawer a {
+      display: block;
+      padding: 12px 20px;
+      color: white;
+      text-decoration: none;
+    }
+
+    .drawer a:hover {
+      background-color: #34495e;
+    }
+
+    .drawer-backdrop {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 999;
+    }
+
+    .drawer-backdrop.show {
+      display: block;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        display: none;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
+
+    
+
     main {
       max-width: 800px;
       margin: 0 auto;
       padding: 30px 20px;
     }
-
     h1 {
       text-align: center;
       padding: 20px;
     }
-
     .queue-item {
       background: #fff;
       padding: 15px;
@@ -105,15 +132,12 @@
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-
     .queue-item p {
       margin: 5px 0;
     }
-
     .btn-group {
       margin-top: 10px;
     }
-
     button {
       margin-right: 10px;
       padding: 6px 12px;
@@ -121,39 +145,30 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
     .btn-enter { background: #2ecc71; color: white; }
     .btn-exit { background: #e74c3c; color: white; }
   </style>
 </head>
 <body>
-  <header>
+ <header>
     <div class="header-bar">
-      <button class="hamburger" onclick="toggleDrawer()">☰</button>
       <div class="header-title">店内管理システム</div>
       <div class="header-links">
         <a href="#">マニュアル</a>
         <a href="#">ログアウト</a>
       </div>
     </div>
+    <nav>
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="histogram.html" class="active">待ち管理</a>
+    </nav>
   </header>
-
-  <div id="drawer" class="drawer">
-    <a href="index.html">ホーム</a>
-    <a href="map.html">店内マップ</a>
-    <a href="histogram.html">混雑状況可視化</a>
-    <a href="histogram.html">待ち管理</a>
-  </div>
-
   <h1 style="display:none;" id="mainTitle">順番待ち管理（店員用）</h1>
   <div id="queueList"></div>
 
   <script>
-    function toggleDrawer() {
-      const drawer = document.getElementById('drawer');
-      drawer.classList.toggle('open');
-    }
-
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
       authDomain: "qr-visitor-log.firebaseapp.com",
@@ -167,85 +182,113 @@
 
     const ticketMap = {};
 
+    const hamburger = document.getElementById("hamburger");
+    const drawerMenu = document.getElementById("drawerMenu");
+    const drawerBackdrop = document.getElementById("drawerBackdrop");
+
+    hamburger.addEventListener("click", () => {
+      drawerMenu.classList.toggle("open");
+      drawerBackdrop.classList.toggle("show");
+    });
+
+    drawerBackdrop.addEventListener("click", () => {
+      drawerMenu.classList.remove("open");
+      drawerBackdrop.classList.remove("show");
+    });
+
+    
     function formatTime(iso) {
       const d = new Date(iso);
       const options = { month: 'numeric', day: 'numeric', hour: '2-digit', minute: '2-digit' };
       return d.toLocaleString("ja-JP", options);
     }
 
-    function renderQueue() {
-      db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-        const allDocs = snapshot.docs;
-        const visibleDocs = allDocs.filter(doc => {
-          const status = doc.data().status;
-          return status === "waiting" || status === "entered";
-        });
+function renderQueue() {
+  db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+    const allDocs = snapshot.docs;
 
-        const list = document.getElementById("queueList");
-        list.innerHTML = "";
+    // 表示対象: waiting と entered
+    const visibleDocs = allDocs.filter(doc => {
+      const status = doc.data().status;
+      return status === "waiting" || status === "entered";
+    });
 
-        allDocs.forEach((doc, index) => {
-          if (!(doc.id in ticketMap)) {
-            ticketMap[doc.id] = index + 1;
-          }
-        });
+    const list = document.getElementById("queueList");
+    list.innerHTML = "";
 
-        visibleDocs.forEach(doc => {
-          const data = doc.data();
-          const ticketNumber = ticketMap[doc.id] || "?";
+    allDocs.forEach((doc, index) => {
+      if (!(doc.id in ticketMap)) {
+        ticketMap[doc.id] = index + 1;
+      }
+    });
 
-          const item = document.createElement("div");
-          item.className = "queue-item";
-          item.innerHTML = `
-            <p><strong>番号札:</strong> ${ticketNumber}</p>
-            <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
-            <p><strong>状態:</strong> ${data.status}</p>
-            <div class="btn-group"></div>
-          `;
+    visibleDocs.forEach(doc => {
+      const data = doc.data();
+      const ticketNumber = ticketMap[doc.id] || "?";
 
-          const btnGroup = item.querySelector(".btn-group");
+      const item = document.createElement("div");
+      item.className = "queue-item";
+      item.innerHTML = `
+        <p><strong>番号札:</strong> ${ticketNumber}</p>
+        <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
+        <p><strong>状態:</strong> ${data.status}</p>
+        <div class="btn-group"></div>
+      `;
 
-          if (data.status === "waiting") {
-            const btnEnter = document.createElement("button");
-            btnEnter.className = "btn-enter";
-            btnEnter.textContent = "入店通知";
-            btnEnter.onclick = () => {
-              db.collection("queue").doc(doc.id).update({ status: "entered" });
-            };
-            btnGroup.appendChild(btnEnter);
-          }
+      const btnGroup = item.querySelector(".btn-group");
 
-          if (data.status === "entered") {
-            const btnConfirm = document.createElement("button");
-            btnConfirm.textContent = "入店確定";
-            btnConfirm.style.backgroundColor = "#2980b9";
-            btnConfirm.style.color = "white";
-            btnConfirm.onclick = () => {
-              db.collection("queue").doc(doc.id).update({ status: "confirmed" });
-            };
-            btnGroup.appendChild(btnConfirm);
-          }
+      // 入店通知（waiting のときのみ表示）
+      if (data.status === "waiting") {
+        const btnEnter = document.createElement("button");
+        btnEnter.className = "btn-enter";
+        btnEnter.textContent = "入店通知";
+        btnEnter.onclick = () => {
+          db.collection("queue").doc(doc.id).update({ status: "entered" });
+        };
 
-          if (data.status === "waiting" || data.status === "entered") {
-            const btnCancel = document.createElement("button");
-            btnCancel.className = "btn-exit";
-            btnCancel.textContent = "キャンセル";
-            btnCancel.onclick = () => {
-              db.collection("queue").doc(doc.id).update({ status: "expired" });
-            };
-            btnGroup.appendChild(btnCancel);
-          }
+        btnGroup.appendChild(btnEnter);
+      }
 
-          list.appendChild(item);
-        });
-      });
-    }
+      // 入店確定（entered のときのみ表示）
+      if (data.status === "entered") {
+        const btnConfirm = document.createElement("button");
+        btnConfirm.textContent = "入店確定";
+        btnConfirm.style.backgroundColor = "#2980b9";
+        btnConfirm.style.color = "white";
+        btnConfirm.onclick = () => {
+          db.collection("queue").doc(doc.id).update({ status: "confirmed" });
+        };
+        btnGroup.appendChild(btnConfirm);
+      }
 
-    window.onload = () => {
-      document.getElementById("mainTitle").style.display = "block";
-      renderQueue();
-    };
-  </script>
+      // キャンセル（waiting/entered のとき常に表示）
+      if (data.status === "waiting" || data.status === "entered") {
+        const btnCancel = document.createElement("button");
+        btnCancel.className = "btn-exit";
+        btnCancel.textContent = "キャンセル";
+        btnCancel.onclick = () => {
+          db.collection("queue").doc(doc.id).update({ status: "expired" });
+        };
+        btnGroup.appendChild(btnCancel);
+      }
+
+      list.appendChild(item);
+    });
+  });
+}
+
+
+  window.onload = () => {
+    document.getElementById("mainTitle").style.display = "block";
+    renderQueue();
+  };
+
+    document.addEventListener('DOMContentLoaded', function () {
+    document.querySelector('.menu-button').addEventListener('click', function () {
+      document.querySelector('.drawer').classList.toggle('open');
+    });
+  });
+</script>
 </body>
 </html>
 
