--- a/practice.html
+++ b/practice.html
@@ -1,263 +1,209 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>店外待ち管理（店員用）</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>混雑可視化システム - トップページ</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <style>
     body {
-      font-family: sans-serif;
       margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
+      font-family: 'Helvetica Neue', sans-serif;
+      background: #f4f9ff;
+      color: #2c3e50;
+      line-height: 1.6;
+      overflow-x: hidden;
     }
-     header {
+
+    header {
       background-color: #2c3e50;
       color: white;
+      padding: 30px 20px;
+      text-align: center;
     }
 
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
+    .container {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 60px 20px;
     }
 
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
+    .section {
+      margin-bottom: 80px;
     }
 
-    .header-links {
-      display: flex;
-      gap: 20px;
+    .section img {
+      width: 100%;
+      max-width: 640px;
+      display: block;
+      margin: 0 auto 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
     }
 
-    .header-links a {
+    h1, h2 {
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.2rem;
+    }
+
+    h2 {
+      font-size: 1.6rem;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1rem;
+      padding: 0 10px;
+      text-align: center;
+    }
+
+    .button-wrapper {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .btn-start {
+      padding: 14px 32px;
+      background: #3498db;
       color: white;
+      border: none;
+      font-size: 1.1rem;
+      border-radius: 8px;
       text-decoration: none;
-      font-weight: 500;
+      transition: background 0.3s;
     }
 
-    .header-links a:hover {
+    .btn-start:hover {
+      background: #2980b9;
+    }
+
+    footer {
+      background: #eee;
+      padding: 30px 20px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    footer a {
+      margin: 0 10px;
+      color: #2c3e50;
+      text-decoration: none;
+    }
+
+    footer a:hover {
       text-decoration: underline;
     }
 
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
+    /* パララックス背景セクション */
+    .parallax-section {
+      background-image: url('parallax.jpg'); /* お好きな画像に変更可能 */
+      min-height: 300px;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
-
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
+    .parallax-section h2 {
       color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+      font-size: 2rem;
     }
-
-    .drawer.open {
-      left: 0;
-    }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
-    }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-    h1 {
-      text-align: center;
-      padding: 20px;
-    }
-    .queue-item {
-      background: #fff;
-      padding: 15px;
-      margin: 10px auto;
-      max-width: 500px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .queue-item p {
-      margin: 5px 0;
-    }
-    .btn-group {
-      margin-top: 10px;
-    }
-    button {
-      margin-right: 10px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn-enter { background: #2ecc71; color: white; }
-    .btn-exit { background: #e74c3c; color: white; }
   </style>
 </head>
+
 <body>
   <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </div>
+    <h1 class="fade-in">混雑可視化システム</h1>
+    <p class="fade-in">A Smart QR-Based Visitor Tracking Tool</p>
   </header>
-  <h1 style="display:none;" id="mainTitle">順番待ち管理（店員用）</h1>
-  <div id="queueList"></div>
+
+  <div class="container">
+    <section class="section">
+      <img src="map.png" alt="店内マップ" class="fade-up" />
+      <div class="button-wrapper fade-up">
+        <a href="index.html" class="btn-start">▶ 使ってみる</a>
+      </div>
+    </section>
+
+    <section class="section fade-up">
+      <h2>このプロジェクトについて</h2>
+      <p>QRコードを使ってお客様の入退店を記録し、店舗の混雑状況やテーブル利用状況、外の待ち状況などをリアルタイムで可視化するシステムです。<br>
+      お客様は入店と退店のそれぞれ際に各テーブルにあるQRコードを読み込んでもらいます。この情報は現在の混雑度や混雑時間の把握に利用されます<br>
+      この方法によってお客様は実際に店に向かわなくても混雑度を知ることができ、行動の最適化を図ることができるようになります。</p>
+    </section>
+
+    <!-- パララックスセクション -->
+    <section class="parallax-section">
+      <h2>リアルタイムの「見える化」を体験しよう</h2>
+    </section>
+
+    <section class="section fade-up">
+      <h2>研究背景</h2>
+      <p>
+        このプロジェクトは、<br>
+      </p>
+    </section>
+
+    <section class="section fade-up">
+      <h2>特徴</h2>
+      <p>
+        ✅ 入退店ログの記録と可視化<br>
+        ✅ 外での待機状況表示と管理<br>
+        ✅ テーブルごとの利用時間や滞在時間表示<br>
+        ✅ 店舗向けにヒストグラムで混雑時間帯分析
+      </p>
+    </section>
+
+    <section class="section fade-up">
+      <h2>技術スタック</h2>
+      <p>Firebase / HTML5 / JavaScript / GSAP / Chart.js など</p>
+    </section>
+
+    <div class="button-wrapper fade-up">
+      <a href="index.html" class="btn-start">▶ 使ってみる</a>
+    </div>
+  </div>
+
+  <footer>
+    <p>© 2025 QR Visitor Log Project</p>
+    <a href="https://github.com/Mimichan33/QR-webpage" target="_blank">GitHub</a>
+    <a href="#">マニュアル（準備中）</a>
+  </footer>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    // GSAP アニメーション
+    window.addEventListener("load", () => {
+      gsap.from(".fade-in", {
+        opacity: 0,
+        y: 30,
+        duration: 1,
+        stagger: 0.2,
+        ease: "power2.out"
+      });
 
-    const ticketMap = {};
-    
-    function formatTime(iso) {
-      const d = new Date(iso);
-      const options = { month: 'numeric', day: 'numeric', hour: '2-digit', minute: '2-digit' };
-      return d.toLocaleString("ja-JP", options);
-    }
-
-function renderQueue() {
-  db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-    const allDocs = snapshot.docs;
-
-    // 表示対象: waiting と entered
-    const visibleDocs = allDocs.filter(doc => {
-      const status = doc.data().status;
-      return status === "waiting" || status === "entered";
+      gsap.from(".fade-up", {
+        scrollTrigger: {
+          trigger: ".fade-up",
+          start: "top 80%",
+          toggleActions: "play none none none"
+        },
+        opacity: 0,
+        y: 40,
+        duration: 1,
+        stagger: 0.3,
+        ease: "power2.out"
+      });
     });
-
-    const list = document.getElementById("queueList");
-    list.innerHTML = "";
-
-    allDocs.forEach((doc, index) => {
-      if (!(doc.id in ticketMap)) {
-        ticketMap[doc.id] = index + 1;
-      }
-    });
-
-    visibleDocs.forEach(doc => {
-      const data = doc.data();
-      const ticketNumber = ticketMap[doc.id] || "?";
-
-      const item = document.createElement("div");
-      item.className = "queue-item";
-      item.innerHTML = `
-        <p><strong>番号札:</strong> ${ticketNumber}</p>
-        <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
-        <p><strong>状態:</strong> ${data.status}</p>
-        <div class="btn-group"></div>
-      `;
-
-      const btnGroup = item.querySelector(".btn-group");
-
-      // 入店通知（waiting のときのみ表示）
-      if (data.status === "waiting") {
-        const btnEnter = document.createElement("button");
-        btnEnter.className = "btn-enter";
-        btnEnter.textContent = "入店通知";
-        btnEnter.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "entered" });
-        };
-
-        btnGroup.appendChild(btnEnter);
-      }
-
-      // 入店確定（entered のときのみ表示）
-      if (data.status === "entered") {
-        const btnConfirm = document.createElement("button");
-        btnConfirm.textContent = "入店確定";
-        btnConfirm.style.backgroundColor = "#2980b9";
-        btnConfirm.style.color = "white";
-        btnConfirm.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "confirmed" });
-        };
-        btnGroup.appendChild(btnConfirm);
-      }
-
-      // キャンセル（waiting/entered のとき常に表示）
-      if (data.status === "waiting" || data.status === "entered") {
-        const btnCancel = document.createElement("button");
-        btnCancel.className = "btn-exit";
-        btnCancel.textContent = "キャンセル";
-        btnCancel.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "expired" });
-        };
-        btnGroup.appendChild(btnCancel);
-      }
-
-      list.appendChild(item);
-    });
-  });
-}
-
-
-  window.onload = () => {
-    document.getElementById("mainTitle").style.display = "block";
-    renderQueue();
-  };
-
-   document.addEventListener('DOMContentLoaded', function () {
-    document.querySelector('.menu-button').addEventListener('click', function () {
-      document.querySelector('.drawer').classList.toggle('open');
-    });
-  });
-</script>
+  </script>
 </body>
 </html>
+
 
