--- a/practice.html
+++ b/practice.html
@@ -2,207 +2,291 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
+  <title>混雑状況</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>混雑可視化システム - トップページ</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
-      margin: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      background: #f4f9ff;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
-      line-height: 1.6;
       overflow-x: hidden;
     }
 
     header {
       background-color: #2c3e50;
       color: white;
-      padding: 30px 20px;
-      text-align: center;
+      position: relative;
     }
 
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 60px 20px;
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
     }
 
-    .section {
-      margin-bottom: 80px;
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
     }
 
-    .section img {
-      width: 100%;
-      max-width: 640px;
-      display: block;
-      margin: 0 auto 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+    .header-links {
+      display: flex;
+      gap: 20px;
     }
 
-    h1, h2 {
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2.2rem;
-    }
-
-    h2 {
-      font-size: 1.6rem;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 1rem;
-      padding: 0 10px;
-      text-align: center;
-    }
-
-    .button-wrapper {
-      text-align: center;
-      margin-top: 40px;
-    }
-
-    .btn-start {
-      padding: 14px 32px;
-      background: #3498db;
+    .header-links a {
       color: white;
-      border: none;
-      font-size: 1.1rem;
-      border-radius: 8px;
       text-decoration: none;
-      transition: background 0.3s;
+      font-weight: 500;
     }
 
-    .btn-start:hover {
-      background: #2980b9;
-    }
-
-    footer {
-      background: #eee;
-      padding: 30px 20px;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    footer a {
-      margin: 0 10px;
-      color: #2c3e50;
-      text-decoration: none;
-    }
-
-    footer a:hover {
+    .header-links a:hover {
       text-decoration: underline;
     }
 
-    /* パララックス背景セクション */
-    .parallax-section {
-      background-image: url('parallax.jpg'); /* お好きな画像に変更可能 */
-      min-height: 300px;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    /* ハンバーガーメニュー */
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
     }
 
-    .parallax-section h2 {
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
       color: white;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
-      font-size: 2rem;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+
+    .drawer.open {
+      left: 0;
+    }
+
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 8px 0;
+    }
+
+    #tables p {
+      font-size: 17px;
     }
   </style>
-</head>
-
-<body>
-  <header>
-    <h1 class="fade-in">混雑可視化システム</h1>
-    <p class="fade-in">A Smart QR-Based Visitor Tracking Tool</p>
-  </header>
-
-  <div class="container">
-    <section class="section">
-      <img src="map.png" alt="店内マップ" class="fade-up" />
-      <div class="button-wrapper fade-up">
-        <a href="index.html" class="btn-start">▶ 使ってみる</a>
-      </div>
-    </section>
-
-    <section class="section fade-up">
-      <h2>このプロジェクトについて</h2>
-      <p>QRコードを使ってお客様の入退店を記録し、店舗の混雑状況やテーブル利用状況、外の待ち状況などをリアルタイムで可視化するシステムです。<br>
-      お客様は入店と退店のそれぞれ際に各テーブルにあるQRコードを読み込んでもらいます。この情報は現在の混雑度や混雑時間の把握に利用されます<br>
-      この方法によってお客様は実際に店に向かわなくても混雑度を知ることができ、行動の最適化を図ることができるようになります。</p>
-    </section>
-
-    <!-- パララックスセクション -->
-    <section class="parallax-section">
-      <h2>リアルタイムの「見える化」を体験しよう</h2>
-    </section>
-
-    <section class="section fade-up">
-      <h2>研究背景</h2>
-      <p>
-        このプロジェクトは、<br>
-      </p>
-    </section>
-
-    <section class="section fade-up">
-      <h2>特徴</h2>
-      <p>
-        ✅ 入退店ログの記録と可視化<br>
-        ✅ 外での待機状況表示と管理<br>
-        ✅ テーブルごとの利用時間や滞在時間表示<br>
-        ✅ 店舗向けにヒストグラムで混雑時間帯分析
-      </p>
-    </section>
-
-    <section class="section fade-up">
-      <h2>技術スタック</h2>
-      <p>Firebase / HTML5 / JavaScript / GSAP / Chart.js など</p>
-    </section>
-
-    <div class="button-wrapper fade-up">
-      <a href="index.html" class="btn-start">▶ 使ってみる</a>
-    </div>
-  </div>
-
-  <footer>
-    <p>© 2025 QR Visitor Log Project</p>
-    <a href="https://github.com/Mimichan33/QR-webpage" target="_blank">GitHub</a>
-    <a href="#">マニュアル（準備中）</a>
-  </footer>
 
   <script>
-    // GSAP アニメーション
-    window.addEventListener("load", () => {
-      gsap.from(".fade-in", {
-        opacity: 0,
-        y: 30,
-        duration: 1,
-        stagger: 0.2,
-        ease: "power2.out"
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    const tableCounts = {};
+
+    function formatTimestamp(isoString) {
+      if (!isoString || typeof isoString !== "string") return "ー";
+      const date = new Date(isoString);
+      const options = {
+        timeZone: "Asia/Tokyo",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit",
+        hour: "2-digit",
+        minute: "2-digit"
+      };
+      return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g, "-").replace(",", "");
+    }
+
+    function calculateElapsedTime(isoString) {
+      if (!isoString) return "";
+      const start = new Date(isoString);
+      const now = new Date();
+      const diffMs = now - start;
+      if (diffMs < 0) return "";
+      const minutes = Math.floor(diffMs / 60000);
+      const hours = Math.floor(minutes / 60);
+      const remainingMinutes = minutes % 60;
+      return hours > 0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
+    }
+
+    function updateTableDisplays() {
+      Object.keys(tableCounts).forEach(tableNum => {
+        const t = tableCounts[tableNum];
+        const currentCount = t.enter - t.exit;
+        const timeToShow = currentCount > 0 ? t.lastEnterTime : null;
+        const status = currentCount > 0 ? "利用中" : "空席";
+        const timeText = formatTimestamp(timeToShow);
+        const elapsed = currentCount > 0 ? `｜${calculateElapsedTime(timeToShow)}` : "";
+        const element = document.getElementById(`table${tableNum}-status`);
+        if (element) {
+          element.textContent = `${status}（${timeText}${elapsed}）`;
+        }
+      });
+    }
+
+    function countVisitors(snapshot) {
+      let entries = 0;
+      let exits = 0;
+      let waiting = 0;
+
+      for (let i = 1; i <= 9; i++) {
+        tableCounts[i.toString()] = {
+          enter: 0,
+          exit: 0,
+          lastEnterTime: null
+        };
+      }
+
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const table = data.table;
+        const timestamp = data.timestamp;
+        if (!table || !timestamp) return;
+
+        if (data.type === "enter") entries++;
+        if (data.type === "exit") exits++;
+        if (data.type === "wait") waiting++;
+
+        if (tableCounts[table]) {
+          if (data.type === "enter") {
+            tableCounts[table].enter++;
+            if (!tableCounts[table].lastEnterTime || new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)) {
+              tableCounts[table].lastEnterTime = timestamp;
+            }
+          }
+          if (data.type === "exit") {
+            tableCounts[table].exit++;
+          }
+        }
       });
 
-      gsap.from(".fade-up", {
-        scrollTrigger: {
-          trigger: ".fade-up",
-          start: "top 80%",
-          toggleActions: "play none none none"
-        },
-        opacity: 0,
-        y: 40,
-        duration: 1,
-        stagger: 0.3,
-        ease: "power2.out"
+      document.getElementById("count").textContent = entries - exits;
+      document.getElementById("entries").textContent = entries;
+      document.getElementById("exits").textContent = exits;
+      document.getElementById("waitingCount").textContent = waiting;
+
+      updateTableDisplays();
+    }
+
+    window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
       });
-    });
+    };
   </script>
+</head>
+<body>
+
+  <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="#">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </div>
+  </header>
+
+  <main>    
+    <section>
+      <h2>全体状況</h2>
+      <p>現在の入店者数: <span id="count">読み込み中...</span></p>
+      <p>累計入店数: <span id="entries">-</span></p>
+      <p>累計退店数: <span id="exits">-</span></p>
+    </section>
+
+    <section id="tables">
+      <h2>テーブル別 使用状況（時刻）</h2>
+      <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
+      <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
+      <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
+      <p>テーブル4：<span id="table4-status">読み込み中...</span></p>
+      <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
+      <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
+      <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
+      <p>テーブル8：<span id="table8-status">読み込み中...</span></p>
+      <p>テーブル9：<span id="table9-status">読み込み中...</span></p>
+    </section>
+
+    <section>
+      <h2>待機人数</h2>
+      <p>現在の待機人数: <span id="waitingCount">読み込み中...</span></p>
+    </section>
+
+    <h2>店内マップ</h2>
+<iframe src="map.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+
+  </main>
+
 </body>
 </html>
 
