--- a/practice.html
+++ b/practice.html
@@ -2,160 +2,172 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>混雑状況</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <title>テーブル管理</title>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <style>
     body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      color: #2c3e50;
-      overflow-x: hidden;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      padding: 20px;
     }
 
     header {
-      background-color: #2c3e50;
-      color: white;
-      position: relative;
-      margin-bottom: 0;
-      padding-bottom: 0; 
-    }
-
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-    }
-
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
-    .full-width-section {
-  width: 100vw;
   position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-
-  background: #e0f7da;
-  padding: 60px 0;
-  text-align: center;
-  margin-top: 0 !important; 
+  background-color: #00796b;
+  padding: 10px 20px;
+  color: white;
+  font-weight: bold;
+  user-select: none;
 }
 
-    /* ハンバーガーメニュー */
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
-    }
+.drawer-hidden {
+  display: none;
+}
 
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
+/* ハンバーガーアイコン */
+.drawer-toggle-label {
+  display: inline-block;
+  cursor: pointer;
+  width: 30px;
+  height: 24px;
+  position: relative;
+}
 
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
+.drawer-toggle-label span {
+  display: block;
+  height: 4px;
+  background: white;
+  margin-bottom: 5px;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+/* ドロワーメニュー */
+.drawer-menu {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 220px;
+  height: 100%;
+  background: #004d40;
+  padding-top: 60px;
+  transition: left 0.3s ease;
+  z-index: 1000;
+}
+
+.drawer-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.drawer-menu li {
+  padding: 15px 20px;
+}
+
+.drawer-menu li a {
+  color: white;
+  text-decoration: none;
+  font-weight: normal;
+  display: block;
+}
+
+.drawer-menu li a:hover {
+  background-color: #00695c;
+  border-radius: 4px;
+}
+
+/* チェックボックスがチェックされたらドロワーを表示 */
+.drawer-hidden:checked ~ .drawer-menu {
+  left: 0;
+}
+
+/* ハンバーガーアイコンのアニメーション */
+.drawer-hidden:checked + .drawer-toggle-label span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 8px;
+  position: relative;
+}
+
+.drawer-hidden:checked + .drawer-toggle-label span:nth-child(2) {
+  opacity: 0;
+}
+
+.drawer-hidden:checked + .drawer-toggle-label span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: -8px;
+  position: relative;
+}
+    h1 {
+      text-align: center;
+    }
+    .table-list, .usage-logs {
+      margin-top: 30px;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-bottom: 40px;
+    }
+    th, td {
+      border: 1px solid #aaa;
+      padding: 10px;
+      text-align: center;
+    }
+    th {
+      background-color: #00796b;
       color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
     }
-
-    .drawer.open {
-      left: 0;
+    .occupied {
+      background-color: #ffccbc;
     }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
+    .vacant {
+      background-color: #c8e6c9;
     }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-
-    h2 {
-      margin-top: 40px;
+    /* 検索フォームのスタイル */
+    .search-filters {
       margin-bottom: 10px;
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: 5px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
     }
-
-
+    .search-filters label {
+      font-weight: bold;
+      margin-right: 5px;
+    }
+    .search-filters input {
+      padding: 5px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      min-width: 120px;
+    }
   </style>
 </head>
 <body>
-
     <header>
-    <div class="menu-button">
+    <input type="checkbox" id="drawerCheckbox" class="drawer-hidden">
+    <label for="drawerCheckbox" class="drawer-toggle-label" aria-label="メニューを開く">
       <span></span>
       <span></span>
       <span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="start.html">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </div>
+    </label>
+    <nav class="drawer-menu">
+      <ul>
+        <li><a href="index.html">ホーム</a></li>
+        <li><a href="map.html">店舗マップ</a></li>
+        <li><a href="histogram.html">混雑履歴</a></li>
+        <li><a href="table_management.html">テーブル管理</a></li>
+      </ul>
+    </nav>
   </header>
 
-  
-  <h1>テーブル管理画面</h1>
+
+
+    <h1>テーブル管理画面</h1>
+
+
   <div class="table-list">
     <h2>テーブル一覧</h2>
     <table id="tableStatusTable">
